# lege

./: CMakeLists.txt  README.md  config.ld  enum.cpp  enums.lua  event.c  events.lua  hello_world.c  index.html  log.c  log.cpp  logging.lua  meson.build  meson_options.txt  readonly.c  readonly.cpp  strict.c  strict.cpp  struct.c  task.c  task.cpp  task.h  task.hpp  weak.c  weak.cpp  window.c  window.h
.github/workflows/: docs.yml  meson-tests.yml
cli/: CMakeLists.txt  args.c  cmd_run.c  error_reporting.c  main.c  main.cpp  meson.build  optparse.c
cli/include/: args.h  error_reporting.h
cmake/: ByteCompileLuaModule.cmake  FindLibuv.cmake  FindSteamAudio.cmake
engine/: CMakeLists.txt  game_engine.cpp  game_engine.hpp
engine/sdl/: error.cpp  helpers.cpp  helpers.hpp
examples/: enums.lua.html  events.lua  events.lua.html  hello_world.c  hello_world.c.html  logging.lua  logging.lua.html  meson.build  preload.c  preload.c.html  readonly_tables..lua  readonly_tables..lua.html  strict_structs.lua  strict_structs.lua.html  using_strict.lua  using_strict.lua.html  weak_tables.lua  weak_tables.lua.html
lege/: engine.c  lege.h.in  lmod_preloads.c  meson.build  preloads.c  util.c
lege/include/: lege_internal.h  lprefix.h  preloads.h  util.h
lege/modules/: enum.c  event.c  log.c  lutf8lib.c  meson.build  readonly.c  strict.c  struct.c  weak.h  window.c
lib/: CMakeLists.txt  builtins.cpp  builtins.hpp  engine.cpp  engine.hpp  util.cpp  util.hpp  window.cpp
lib/include/: lege.hpp
lib/lua/: error.cpp  error.hpp  helpers.hpp  new.hpp  stack.cpp  stack.hpp  table_view.cpp  table_view.hpp  types.hpp
lib/modules/: CMakeLists.txt  c_libs.lua  log.cpp  lutf8lib.c  strict.cpp  struct.cpp  vec.cpp  window.cpp
lib/sdl/: error.hpp  helpers.hpp
modules/: lege.c_libs.html  lege.enum.html  lege.event.html  lege.log.html  lege.readonly.html  lege.strict.html  lege.struct.html  lege.weak.html  lege.window.html  lib.util.html
rt/: CMakeLists.txt  runtime.cpp  runtime.hpp  util.cpp  util.hpp
rt/lua/: helpers.hpp  nil.hpp  stack.hpp  state.cpp  state.hpp  table_view.cpp  table_view.hpp  types.hpp
rt/modules/: lprefix.h  task.cpp  task.hpp  weak.cpp  weak.hpp
subprojects/: c-flags.wrap  luajit.wrap
topics/: README.md.html
util/: meson.build  util.c
util/include/: util.h
